# rl-eval-kit

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  utils.py
FQE/: __init__.py  _shim.py  fqe_boosted.py  fqe_boosted_tune.py  fqe_linear.py  fqe_neural.py  sw_fqe_linear.py
FQE_calibration_neurips/: README.md  __init__.py  configs  figures  paper_import_bundle  requirements.txt  results  scripts  src  tests
FQE_neurips/: __init__.py  results
FQI/: fqi_linear.py
IRL/: __init__.py  _occupancy_ratio_compat.py  fit_importance_and_transition_ratios.py  fit_occupancy_ratio.py  jrssb_simulation.py  multiclass.py  run_jrssb_simulation.py  softMDP.py
IRL_neurips/: IRL_neurips_paper_repro  README.md  __init__.py  run_demo.py
dualDICE/: dualdice_linear.py
experiments/: crm_nn_snapshot_100000_20251210_172600.pkl  crm_nn_snapshot_100000_20251210_172600.txt  crm_nn_snapshot_10000_20251210_172600.pkl  crm_nn_snapshot_10000_20251210_172600.txt  crm_nn_snapshot_50000_20251210_172600.pkl  crm_nn_snapshot_50000_20251210_172600.txt  crm_nn_snapshot_summaries_20251210_034345.pkl  crm_nn_snapshot_summaries_20251210_034345.txt
hopper_fqe_benchmark/: __init__.py  artifacts
legacy/: __init__.py
legacy/RL-Evaluation/FQE/: README.md  pyproject.toml
legacy/RL-Evaluation/FQE/fqe/: __init__.py  boosted.py  neural.py
legacy/RL-Evaluation/FQE/fqe_benchmark/: data.py  run.py  runner.py  types.py
legacy/RL-Evaluation/FQE/tests/: test_neural_fqe.py
simulation/: GarnetMDP.py  softmax_helpers.py
tools/: check_assets.py  fori_cv_strategy_benchmark.py  (+2 more)
(+419 files in other folders)
