[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fqe"
version = "0.1.0"
description = "Production LightGBM fitted Q evaluation tools for RL evaluation"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "numpy",
    "lightgbm",
]

[project.optional-dependencies]
neural = ["torch"]
benchmark = ["matplotlib"]
dev = ["build", "pytest", "ruff", "torch", "matplotlib"]

[project.scripts]
fqe-benchmark = "fqe_benchmark.run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fqe*", "fqe_benchmark*"]
